--- a/baserow/setup.cfg
+++ b/baserow/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = workshop-baserow
+name = baserow
 version = 0.0.1
 author = Tan Li
 author_email = tanl@workshop.cool
@@ -30,10 +30,6 @@ dev =
     black
     isort
     flake8
-
-[options.entry_points]
-console_scripts =
-    baserow = app:cli
 
 [options.packages.find]
 where = src
