--- a/baserow/setup.cfg
+++ b/baserow/setup.cfg
@@ -2,13 +2,13 @@
 name = baserow
 version = 0.0.1
 author = Tan Li
-author_email = tanl@workshop.cool
+author_email = tan@tanli.dev
 description = A python client for interacting with baserow API
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/WorkshopHQ/baserow-client
+url = https://github.com/WorkshopHQ/pybaserow
 project_urls =
-    Bug Tracker = https://github.com/WorkshopHQ/baserow-client/issues
+    Bug Tracker = https://github.com/WorkshopHQ/pybaserow/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
